--- a/first_django/demos/templates/calculator.html
+++ b/first_django/demos/templates/calculator.html
@@ -9,5 +9,19 @@
 <body>
     <h1>김병수수수수수</h1>
     <p>django</p>
+
+    <form action="">
+        <input type="text" name="num1">
+        <select name = "operators">
+            <option value="+">+</option>>
+            <option value="-">-</option>>
+            <option value="*">*</option>>
+            <option value="/">/</option>>
+        </select>
+        <input type="text" name="num2">
+        <input type="submit">
+        <br>
+        <p>결과값: {{ result }}</p>
+    </form>
 </body>
 </html>
